k8s/peer-authentication.yml
apiVersion: "security.istio.io/v1beta1"
kind: PeerAuthentication
metadata:
  name: default
  namespace: default
spec:
  mtls:
    mode: STRICT
