k8s/destinationrule.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: productdetails
spec:
  host: productservice.kk.svc.cluster.local
  trafficPolicy:
    connectionPool:
      tcp:
        maxConnections: 4
        connectTimeout: 30ms
        tcpKeepalive:
          time: 7200s
          interval: 75s
